added code for saving seen counts, though it isn't working. also rearranged some things.